Fix flipclock flex not wraping on mobile.

--- a/frontend/src/flipclock.css
+++ b/frontend/src/flipclock.css
@@ -6,8 +6,9 @@
 .flipClock {
   display: flex;
   justify-content: space-between;
-  width: 570px;
+  max-width: 570px;
   margin: auto;
+  flex-wrap: wrap;
 }
 
 .flipUnitContainer {
